--- a/roles/wireguard_setup/tasks/main.yml
+++ b/roles/wireguard_setup/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- name: Allowing traffic forwarding
+  become: true
+  ansible.posix.sysctl:
+    name: net.ipv4.ip_forward
+    value: "1"
+    state: present
+
+- name: Get interface
+  shell: ip -o -4 route show to default | awk '{print $5}'
+  register: interface
+  args:
+    executable: /bin/bash
+
 - name: Install WireGuard
   apt:
     name: wireguard
@@ -8,26 +21,27 @@
 - name: Allow WireGuard connections through firewall
   ufw:
     rule: allow
-    port: '51820'
+    state: reloaded
+    port: "{{ wg_port }}"
     proto: udp
   become: yes
 
 - name: Generate WireGuard private server key
-  command: wg genkey
+  shell: wg genkey
   register: wg_server_private_key
-  changed_when: false
+  args:
+    executable: /bin/bash
 
 - name: Derive WireGuard server public key
   shell: echo "{{ wg_server_private_key.stdout }}" | wg pubkey
   register: wg_server_public_key
-  changed_when: false
   args:
     executable: /bin/bash
 
 - name: Generate WireGuard client private keys
   shell: wg genkey
   register: client_private_keys
-  loop: "{{ range(1, 6)|list }}"
+  loop: "{{ clients }}"
   args:
     executable: /bin/bash
 
@@ -41,31 +55,23 @@
 - name: Configure WireGuard clients
   template:
     src: wireguard_client.conf.j2
-    dest: client{{ item }}.conf
+    dest: client_{{ item.name }}.conf
   vars:
-    client_private_key: "{{ client_private_keys.results[item - 1].stdout }}"
-    client_number: "{{ item }}"
+    server_ip: "{{ inventory_hostname }}"
+    server_port: "{{ wg_port }}"
+    client_address: "{{ item.ip }}"
     server_public_key: "{{ wg_server_public_key.stdout }}"
-    server_public_ip: "{{ inventory_hostname }}"
-  loop: "{{ range(1, 6)|list }}"
+    client_private_key: "{{ client_private_keys.results[item.index].stdout }}"
+  loop: "{{ clients }}"
 
 - name: Configure WireGuard server
   template:
     src: wireguard_server.conf.j2
     dest: /etc/wireguard/wg0.conf
   vars:
-    client1_public_key: "{{ client_public_keys.results[0].stdout }}"
-    client2_public_key: "{{ client_public_keys.results[1].stdout }}"
-    client3_public_key: "{{ client_public_keys.results[2].stdout }}"
-    client4_public_key: "{{ client_public_keys.results[3].stdout }}"
-    client5_public_key: "{{ client_public_keys.results[4].stdout }}"
-  become: yes
-
-- name: Enable and start WireGuard
-  systemd:
-    name: wg-quick@wg0
-    state: started
-    enabled: yes
+    server_port: "{{ wg_port }}"
+    server_private_key: "{{ wg_server_private_key.stdout }}"
+    iface: "{{ interface.stdout }}"
   become: yes
 
 - name: Install qrencode
@@ -75,5 +81,5 @@
   become: yes
 
 - name: Generate QR codes for client configurations
-  shell: cat client{{ item }}.conf | qrencode -t ansiutf8 > client{{ item }}.qrcode
-  loop: "{{ range(1, 6)|list }}"
+  shell: cat client_{{ item.name }}.conf | qrencode -t ansiutf8 > client_{{ item.name }}.qrcode
+  loop: "{{ clients }}"
